# gateway-oss

./: .gitignore  .golangci.yml  LICENSE  NOTICES  README.md  go.mod  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: go.yml  proto-stub-check.yml  python.yml  typescript.yml
configs/: default-policies.yaml
docs/: README.md
proto/: buf.gen.yaml
proto/aixle/gateway/v1/: health.proto
sdk/go/: version.go  version_test.go
sdk/python/tests/: test_version.py
sdk/typescript/: package-lock.json  package.json  tsconfig.json
