[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gateway-oss"
version = "0.0.0.dev0"
description = "Aixle Gateway open-source MIT components — SDK, reference plug-ins, examples."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aixle Corp" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["ruff>=0.4", "mypy>=1.10", "pytest>=8"]

[tool.setuptools.packages.find]
where = ["sdk/python"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["sdk/python/gateway_oss"]

[tool.pytest.ini_options]
testpaths = ["sdk/python/tests"]
markers = [
  "integration: integration tests requiring external services (in-container DBs, HTTP services)",
]
